# AMRIT

./: .all-contributorsrc  .gitignore  AI_ASSISTANT_GUIDE.md  CLAUDE.md  Fix: Multiple Error Message Popups on Login Failure (HWC UI)  LOCAL_DEVELOPMENT.md  README.md  SECURITY.md  commitlint.config.js  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: C4GT_DMP_2025.yml  bug_report.yml  c4gt_community.yml  config.yml  documentation_improvement.yml  feature_request.yml
.github/ISSUE_TEMPLATE/workflows/: commitlint.yml
.github/workflows/: checkstyle.yml  commit-lint.yml  commitlint.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md
docs/ai-framework/: .cursorrules  AMRIT_CODING_STANDARDS.md  CONTRIBUTING.md  README.md  mcp.json
docs/ai-framework/mcp-servers/amrit-docs-mcp/: README.md  RETRY_DESIGN.md  package-lock.json  package.json  tsconfig.json
docs/ai-framework/skills/: generate-jira-ticket.md
experimental/agentic-ai-framework/: README.md  pyproject.toml
experimental/agentic-ai-framework/examples/: repo_manifest.json
experimental/agentic-ai-framework/examples/docs/: amrit-overview.md  amrit-overview.txt
experimental/agentic-ai-framework/skills/: generate-implementation-plan.md
experimental/agentic-ai-framework/src/amrit_agent_framework/: __init__.py  cli.py  indexer.py  mcp_stdio.py  repo_map.py  skills.py  standards.py
experimental/agentic-ai-framework/standards/: amrit-coding-standards.md
experimental/agentic-ai-framework/tests/: test_framework.py
(+3 files in other folders)
