[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amrit-agent-framework-prototype"
version = "0.1.0"
description = "Experimental AMRIT-aware agent framework prototype."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AMRIT AI framework contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
amrit-agent = "amrit_agent_framework.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
